NSFW blur, titles link to AL, layout shift fixed

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,9 @@
 @import './base.css';
 
+html {
+  scrollbar-gutter: stable;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -8,11 +12,7 @@
   font-weight: normal;
 }
 
-a,
-.green {
+
+a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
 }
-
-
